[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Bot.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font/font36pt.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/Pong.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/music/Arcade fast flow1.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/sfx/Score.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 496, 10 )

[node name="Pong" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 544 )
scale = Vector2( 0.5, 0.5 )

[node name="Bot" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 64 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
ball_path = NodePath("../Ball")

[node name="Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 248 )
rotation = 1.5708
scale = Vector2( 2, 1 )

[node name="Wall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1024, 248 )
rotation = 1.5708
scale = Vector2( 2, 1 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 192 )
scale = Vector2( 0.5, 0.5 )
player = NodePath("../Player/Paddle")
bot = NodePath("../Bot/Paddle")

[node name="WinScreen" type="Label" parent="."]
visible = false
margin_left = 272.0
margin_top = 224.0
margin_right = 747.0
margin_bottom = 315.0
custom_fonts/font = ExtResource( 5 )
text = "Congratulations you won!
Press R to play again"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoosScreen" type="Label" parent="."]
visible = false
margin_left = 272.0
margin_top = 224.0
margin_right = 747.0
margin_bottom = 315.0
custom_fonts/font = ExtResource( 5 )
text = "Too Bad you Lost
Press R to play again"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLoss" type="Area2D" parent="."]
position = Vector2( 512, 640 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLoss"]
shape = SubResource( 1 )

[node name="BotLoss" type="Area2D" parent="."]
position = Vector2( 512, -48 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotLoss"]
shape = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 264 )
stream = ExtResource( 7 )
autoplay = true

[node name="Score" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, -48 )
stream = ExtResource( 8 )

[node name="Score2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 640 )
stream = ExtResource( 8 )
[connection signal="body_entered" from="PlayerLoss" to="." method="_on_PlayerLoss_body_entered"]
[connection signal="body_entered" from="BotLoss" to="." method="_on_BotLoss_body_entered"]

[editable path="Player"]

[editable path="Bot"]
